inheritance with class and with Object.create()

--- a/OOP/index.html
+++ b/OOP/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
 
 <head>
@@ -15,16 +11,13 @@
     <sc </head>
 
 <body>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-    <script src="prototype.js" async defer></script>
-    <script src="class.js" async defer></script>
+    <h2>Please open browser inspection (or press F12) to see demo :XD</h2>
+    <!-- <script src="prototype.js" async defer></script> -->
+    <!-- <script src="class.js" async defer></script> -->
     <script src="inheritance.js" async defer></script>
-    <script src="encapsulation.js" async defer></script>
-    <script src="polymorphism.js" async defer></script>
-    <script src="absaction.js" async defer></script>
+    <!-- <script src="encapsulation.js" async defer></script> -->
+    <!-- <script src="polymorphism.js" async defer></script> -->
+    <!-- <script src="absaction.js" async defer></script> -->
 </body>
 
 </html>
