finish on patterns

--- a/OOP/index.html
+++ b/OOP/index.html
@@ -12,12 +12,12 @@
 
 <body>
     <h2>Please open browser inspection (or press F12) to see demo :XD</h2>
-    <!-- <script src="prototype.js" async defer></script> -->
+    <script src="prototype.js" async defer></script>
     <!-- <script src="class.js" async defer></script> -->
     <!-- <script src="inheritance.js" async defer></script> -->
     <!-- <script src="composition.js" async defer></script> -->
     <!-- <script src="encapsulation.js" async defer></script> -->
-    <script src="polymorphism.js" async defer></script>
+    <!-- <script src="polymorphism.js" async defer></script> -->
     <!-- <script src="abstraction.js" async defer></script> -->
 </body>
 
