--- a/this/index.html
+++ b/this/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <h3>Please open browser inspection learn about 'this' in javascript</h3>
-    <!-- <script src="object.js" async defer></script> -->
+    <script src="object.js" async defer></script>
     <!-- <script src="function.js" async defer></script> -->
-    <script src="change-context.js" async defer></script>
+    <!-- <script src="change-context.js" async defer></script> -->
 </body>
 
 </html>
